test_outputs/connlist/exposure_test_with_anp_12_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment]:

Allowed connections:
	Allowed TCP:[1-9089,9091-65535], UDP, SCTP due to the system default (Allow all)

	Allowed TCP:[9090] due to the following policies and rules:
		Egress (Allowed)
			AdminNetworkPolicy 'exposure-example-12' allows connections by Egress rule allow-tcp9090-to-all-pods-in-existing-ns
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Allowed connections:
	Allowed TCP:[1-9089,9091-65535], UDP, SCTP due to the system default (Allow all)

	Allowed TCP:[9090] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			AdminNetworkPolicy 'exposure-example-12' allows connections by Ingress rule allow-tcp9090-from-pods-in-existing-namespace


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255[External] => hello-world/workload-a[Deployment]
0.0.0.0-255.255.255.255[External] => hello-world/workload-b[Deployment]
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255[External]
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255[External]

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] 	=> 	entire-cluster : SCTP 1-65535,TCP 1-9089,9091-65535,UDP 1-65535
hello-world/workload-a[Deployment] 	=> 	hello-world/[all pods] : All Connections
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] 	<= 	entire-cluster : SCTP 1-65535,TCP 1-9089,9091-65535,UDP 1-65535
hello-world/workload-a[Deployment] 	<= 	hello-world/[all pods] : All Connections
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/workload-b[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Ingress
